Switch to generated server code
This commit switches the server code to use generated code for the
server, generated from the OpenAPI spec. We flesh out the spec as well,
to add in the methods that we'd implemented in Go, but not in the spec.
